# RecordFlux-devutils

./: .gitlab-ci.yml  Makefile  Makefile.common  pyproject.toml  setup.cfg
.github/workflows/: edge_tests.yml  tests.yml
devutils/: check_commit_messages.py  pylint_checker.py
linux/: README.md  config  init  run  update_kernel.sh
tests/: check_commit_messages_test.py  named_bool_test.py
tests/data/: pylint_boolean_argument_invalid.py
tools/: upgrade_dependencies.py
