[metadata]
name = RecordFlux-devutils
version = 0.1.1
license = AGPL-3.0
description = Linter configs and custom checkers
url = https://github.com/Componolit/RecordFlux-devutils

[options]
packages = devutils
python_requires = >=3.8
include_package_data = True

[options.package_data]
devutils = py.typed

[options.extras_require]
devel =
    black ==23.7.0
    mypy ==1.4.1
    pytest >=7, <8
    pytest-cov >=4, <5
    pytest-xdist >=3, <4
    python-kacl ==0.4.6
    ruff ==0.0.282

[options.entry_points]
console_scripts =
    check_commit_messages = devutils.check_commit_messages:main
